{
  "apply": "Apply",
  "filters": {
    "price-asc": "Price: Low to High",
    "price-desc": "Price: High to Low",
    "priceUntil": "Max Cost",
    "rating-asc": "Rating: Low to High",
    "rating-desc": "Rating: High to Low",
    "stars": "Stars",
    "stars-asc": "Stars: Low to High",
    "stars-desc": "Stars: High to Low",
    "title": "Filters"

  },
  "hotelDetail": {
    "checkIn": "Check in:",
    "checkOut": "Check out:",
    "contact": "Contact",
    "email": "Email:",
    "imageGallery": "Image Gallery",
    "location": "Location",
    "phone": "Phone:",
    "reserve": "Book Now",
    "schedule": "Schedule",
    "userRating": "User Rating"
  },
  "hotelList": {
    "empty": "No hotels to show, please clean your filters",
    "loading": "Loading...",
    "title": "Hotels"
  },
  "order": "Order by",
  "resetFilters": "Reset Filters",
  "hotelLocations": "Hotel Locations"
}
