...
  return (
    <>
      <TouchableOpacity
        onPress={toggleBottomSheet}
        accessibilityLabel={'showHotelMap'}
        accessibilityRole="button"
        testID="map-button"
      >
        <MapIcon size={24} color={theme.colors.mainBackgroundDarker} />
      </TouchableOpacity>

      <BottomSheetModal
        ref={bottomSheetModalRef}
...
              {t('hotelLocations')}
            </Text>
          </Box>
          <MapView
            style={styles.map}
            ref={mapRef}
            accessibilityLabel="map-view"
            testID="map-view"
            onMapReady={() => {
              mapRef.current?.fitToElements();
            }}
            initialRegion={{
              latitude: firstHotel?.location?.latitude ?? DEFAULT_LAT,
...
