...
    handleClose();
  }, [setSelectedFilters, setSelectedOrder, handleClose, setFilters, setOrder]);

  // renders
  return !isVisible ? (
    <TouchableOpacity
      testID="filterButton"
      onPress={handleOpen}
      style={[
        styles.circleButton,
        {
          backgroundColor: colors.mainBackground,
        },
...
          onPress={value => setSelectedOrder(value as OrderByOptions)}
          layout="column"
          selectedId={selectedOrder}
        />

        <Button
          testID="applyFilters"
          title={t('apply')}
          variant="primary"
          onPress={onApply}
        />
        <Button
          testID="resetFilters"
...
